--- a/Appceptability/Base.lproj/Main.storyboard
+++ b/Appceptability/Base.lproj/Main.storyboard
@@ -65,6 +65,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="GJx-au-sfr"/>
+                    <connections>
+                        <outlet property="continueButton" destination="3b0-MN-htf" id="2Rh-Q3-sqI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -151,6 +154,11 @@
                         <viewLayoutGuide key="safeArea" id="chK-NX-wNk"/>
                     </view>
                     <navigationItem key="navigationItem" id="diX-Bp-eJ0"/>
+                    <connections>
+                        <outlet property="createButton" destination="K8i-45-ooA" id="j74-D7-fv1"/>
+                        <outlet property="performButton" destination="L9O-oz-DdC" id="yYs-FJ-vOx"/>
+                        <outlet property="viewButton" destination="NpM-Nf-whD" id="XkG-bd-bro"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nXe-rw-7Jt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -202,7 +210,7 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uVd-wA-Vjc" userLabel="EmailView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uVd-wA-Vjc" userLabel="NameView">
                                 <rect key="frame" x="54" y="166.5" width="306" height="191.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="textfield" translatesAutoresizingMaskIntoConstraints="NO" id="hmg-Z1-QWt">
@@ -275,7 +283,7 @@
                                             <constraint firstAttribute="height" constant="128" id="Wwn-jG-66j"/>
                                         </constraints>
                                     </imageView>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm Password" textAlignment="center" minimumFontSize="25" translatesAutoresizingMaskIntoConstraints="NO" id="neq-gA-EQM" userLabel="Password TextField">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm Password" textAlignment="center" minimumFontSize="25" translatesAutoresizingMaskIntoConstraints="NO" id="neq-gA-EQM" userLabel="Confirm Password TextField">
                                         <rect key="frame" x="41" y="0.0" width="198" height="38"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="38" id="xSV-PJ-05Q"/>
@@ -318,6 +326,12 @@
                         <viewLayoutGuide key="safeArea" id="bff-tU-PpB"/>
                     </view>
                     <navigationItem key="navigationItem" title="Register" id="Ypq-QO-sJf"/>
+                    <connections>
+                        <outlet property="regStudyConfirmPasswordTF" destination="neq-gA-EQM" id="XfM-R0-Xh2"/>
+                        <outlet property="regStudyNameTF" destination="ddG-fV-Lwa" id="8Ab-51-eoN"/>
+                        <outlet property="regStudyPasswordTF" destination="TCR-om-uPP" id="oMC-hO-jfC"/>
+                        <outlet property="registerStudyButton" destination="ptM-uV-cb6" id="7RM-ce-lf3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QDK-vG-fum" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -457,6 +471,14 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Demographics" selectedImage="barcode" catalog="system" id="pLI-Mc-2qe"/>
                     <navigationItem key="navigationItem" id="JTn-xe-lDq"/>
+                    <connections>
+                        <outlet property="ageSwitch" destination="PbE-zF-IPC" id="gyl-dT-0Rt"/>
+                        <outlet property="allAboveSwitch" destination="3F7-FL-KS0" id="Vmt-WX-q62"/>
+                        <outlet property="locationSwitch" destination="i27-Yo-b8J" id="S05-ho-Ryo"/>
+                        <outlet property="participantIDSwitch" destination="Vst-uL-HWI" id="4Vn-RT-fAR"/>
+                        <outlet property="sampleIDSwitch" destination="O9e-di-5hA" id="48b-8g-k76"/>
+                        <outlet property="saveAndContinueButton" destination="ew7-as-2ie" id="NuB-2E-coO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jQZ-2a-OfY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -514,6 +536,9 @@
                         <viewLayoutGuide key="safeArea" id="AP6-s2-stD"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Questions" selectedImage="questionmark.circle.fill" catalog="system" id="EiQ-nA-KUd"/>
+                    <connections>
+                        <outlet property="saveAndContinueButton" destination="0Xt-R3-VWb" id="TDh-Xs-BsC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DRs-FP-IgW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -533,7 +558,7 @@
                                     <constraint firstAttribute="height" constant="29" id="TOC-uJ-BEb"/>
                                 </constraints>
                             </slider>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="3" minValue="1" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="Qyx-Ty-0Ds">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="3" minValue="1" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="Qyx-Ty-0Ds" userLabel="Sample Slider">
                                 <rect key="frame" x="53" y="470" width="308" height="30"/>
                             </slider>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="#" textAlignment="center" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="sHB-tA-v9t">
@@ -620,6 +645,13 @@
                         <viewLayoutGuide key="safeArea" id="v4w-t6-3FZ"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Participants &amp; Sample Size" selectedImage="smiley.fill" catalog="system" id="p6n-nX-wb5"/>
+                    <connections>
+                        <outlet property="participantNumberTF" destination="sHB-tA-v9t" id="tx9-US-b7x"/>
+                        <outlet property="participantSlider" destination="FcE-uI-wmP" id="r5J-ix-T9F"/>
+                        <outlet property="sampleNumberTF" destination="tT0-Yx-Teo" id="0gv-LU-K5G"/>
+                        <outlet property="sampleSlider" destination="Qyx-Ty-0Ds" id="Xdn-Wj-k4S"/>
+                        <outlet property="saveAndContinueButton" destination="rVR-ZO-oh4" id="DoV-D3-TPb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bSM-q2-3W3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
